Feature: Imlplement resource allocation to an event
